2006-02-03  Rodney Dawes  <dobey@novell.com>

	* legacy-icon-mappping.xml: Add a link for the application/xhtml+xml
	mime type to be handled properly in GNOME and use the text-html icon
	Add a mapping for text-x-preview and move gnome-fs-regular to it

2006-01-24  Rodney Dawes  <dobey@novell.com>

	* legacy-icon-mapping.xml: Link stock_mail-forward to the new
	mail-forward icon

2006-01-22  Rodney Dawes  <dobey@novell.com>

	* configure.ac: Up version to 0.6.6.1 for release

2006-01-22  Rodney Dawes  <dobey@novell.com>

	* legacy-icon-mapping.xml: Add animations context and link the
	process-working icon to gnome-spinner for compatibility

2006-01-20  Rodney Dawes  <dobey@novell.com>

	* legacy-icon-mapping.xml: Fix typo in weather-few-clouds-night
	
2006-01-20  Rodney Dawes  <dobey@novell.com>

	* configure.ac: Up version to 0.6.6 for release
	
2006-01-20  Rodney Dawes  <dobey@novell.com>

	* README: Add some text and a link to the Icon Naming Spec

2006-01-20  Rodney Dawes  <dobey@novell.com>

	* Makefile.am: Don't do the .pc file generation here
	Move $(pkgconfig_DATA) to DISTCLEANFILES rather than CLEANFILES

	* configure.ac: Generate the .pc file here

	* icon-naming-utils.pc.in: Add prefix and exec_prefix variables so
	that libexecdir can be expanded fully

2006-01-19  Rodney Dawes  <dobey@novell.com>

	* legacy-icon-mapping.xml: Move gtk-delete and stock_delete to be
	links to the edit-delete icon rather than user-trash

2006-01-19  Niko Mirthes  <nmirthes@gmail.com>

	* legacy-icon-mapping.xml: More KDE icon link additions
	
2006-01-19  Rodney Dawes  <dobey@novell.com>

	* legacy-icon-mapping.xml: Map the legacy MIME type icons for SMB
	browsing in GNOME

	Fixes https://bugs.freedesktop.org/show_bug.cgi?id=5541

2006-01-19  Sebastien Bacher <seb128@debian.org>

	* legacy-icon-mapping.xml: Fix typo in starwriter MIME type link

	Fixes https://bugs.freedesktop.org/show_bug.cgi?id=5598

2006-01-19  Rodney Dawes  <dobey@novell.com>
