@@ -1,5 +1,13 @@
 2006-02-03  Rodney Dawes  <dobey@novell.com>
 
+	* legacy-icon-mapping.xml: Add mappings for media-jaz and media-zip
+	and link the related gnome-dev-* icons to them
+
+	Fixes http://bugzilla.gnome.org/show_bug.cgi?id=328606 and
+	https://bugs.freedesktop.org/show_bug.cgi?id=5794
+
+2006-02-03  Rodney Dawes  <dobey@novell.com>
+
 	* legacy-icon-mappping.xml: Add a link for the application/xhtml+xml
 	mime type to be handled properly in GNOME and use the text-html icon
 	Add a mapping for text-x-preview and move gnome-fs-regular to it
